# LingFlow

./: DEVELOPMENT_ROADMAP.md  MOBILE_OPTIMIZATION.md  MVP_DOCUMENTATION.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/reader/: ArticleContent.tsx  WordPopover.tsx
src/pages/: ReaderPage.tsx  ReviewPage.tsx  SavedPage.tsx  VocabularyPage.tsx
src/store/: articleStore.ts  savedArticleStore.ts  selectionStore.ts  wordStore.ts
src/types/: index.ts
